--- a/estilos/style.css
+++ b/estilos/style.css
@@ -3,7 +3,7 @@
 /*AQUI É PRO MOBILE FIRST*/
 
 *{
-    font-family: ;
+    font-family: Arial, Helvetica, sans-serif;
     margin: 0px;
     padding: 0px;
 }
