--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-/*AQUI É PRO MOBILE FIRST*/
+/*AQUI É PRO MOBILE FIRST(principalmente)*/
 
 *{
     font-family: Arial, Helvetica, sans-serif;
