--- a/estilos/style.css
+++ b/estilos/style.css
@@ -3,7 +3,7 @@
 /*AQUI É PRO MOBILE FIRST(principalmente)*/
 
 *{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Times New Roman', Times, serif;
     margin: 0px;
     padding: 0px;
 }
